tests/errors/test_08.x
// Invalid unary operator

fn main() -> i64
{

    let x: i64 = !1;
    let haha: bool = -true;

}